--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -67,5 +67,8 @@ CSS file.
 // Import your custom styles
 @import "global";
 @import "header";
+@import "footer";
 @import "banner";
 @import "home";
+@import "blog";
+@import "contact";
